WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134073
Unfreeze the layer tree on DidFirstVisuallyNonEmptyLayout
https://bugs.webkit.org/show_bug.cgi?id=134073
Summary
Unfreeze the layer tree on DidFirstVisuallyNonEmptyLayout
Antti Koivisto
Reported
2014-06-19 13:58:12 PDT
DidFirstLayout is too early and we usually get a blank page. This doesn't match existing iOS behavior either.
Attachments
patch
(3.72 KB, patch)
2014-06-19 14:05 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-06-19 14:01:48 PDT
<
rdar://problem/17383962
>
Antti Koivisto
Comment 2
2014-06-19 14:05:03 PDT
Created
attachment 233381
[details]
patch
Simon Fraser (smfr)
Comment 3
2014-06-19 14:09:56 PDT
Comment on
attachment 233381
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=233381&action=review
> Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:577 > + if (m_frame == m_frame->page()->mainWebFrame()) {
.isMainFrame()?
> Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:580 > + m_didCompletePageTransitionAlready = true;
The "Already" here seems superfluous.
Antti Koivisto
Comment 4
2014-06-19 15:16:04 PDT
http://trac.webkit.org/changeset/170163
Zsolt Borbely
Comment 5
2014-06-20 01:04:33 PDT
It made all performance tests crash on EFL, here is the new bug report about is:
https://bugs.webkit.org/show_bug.cgi?id=134097
Have you got any idea what happened?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug