Unfreeze the layer tree on DidFirstVisuallyNonEmptyLayout https://bugs.webkit.org/show_bug.cgi?id=134073

Reviewed by Simon Fraser.

DidFirstLayout is too early and we usually get a blank page. This doesn't match the existing iOS behavior either.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::dispatchDidLayout):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::WebPage):



Canonical link: https://commits.webkit.org/152025@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170163 268f45cc-cd09-0410-ab3c-d52691b4dbfc