Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.h
@@ -230,7 +230,7 @@ private:
     WebFrame* m_frame;
     RefPtr<PluginView> m_pluginView;
     bool m_hasSentResponseToPluginView;
-    bool m_didCompletePageTransitionAlready;
+    bool m_didCompletePageTransition;
     bool m_frameHasCustomContentProvider;
     bool m_frameCameFromPageCache;
 };
